# Agentic_AI

./: README.md
Langgraph/: Local_LLM_Chatbot.py
Langgraph/Blog_Generation_Agent/: app.py  frontend.py  main.py  pyproject.toml  requirements.txt
Langgraph/Blog_Generation_Agent/src/graphs/: graph_builder.py
Langgraph/Blog_Generation_Agent/src/llms/: qwenllm.py
Langgraph/Blog_Generation_Agent/src/nodes/: blog_node.py
Langgraph/Blog_Generation_Agent/src/states/: blogstate.py
Langgraph/Chatbot_with_MCP/: client.py  main.py  pyproject.toml  requirements.txt  weather.py
Langgraph/Multi_Agent_Patterns/: Adaptive_RAG.py  Calculator_Langgraph.py  Human_in_the_loop.py  Middleware_HITL.py  correctiveRAG.py  langgraph.json  orchestrator_worker.py  parellel_agents.py  prompt_chaining.py  router.py
Langgraph/Multi_Agent_Patterns/chroma_db_adaptive/: chroma.sqlite3
Langgraph/Sales_Data_Analyst/: app.py  graph.py  llm.py  requirements.txt  state.py
Langgraph/Sales_Data_Analyst/agents/: query_planner.py  writer.py
Langgraph/Sales_Data_Analyst/tools/: sql_tool.py
